# scheme48

./: .editorconfig  .gitignore  README.md  flake.nix  hie.yaml  scheme48.cabal  vanessa.cabal
app/: Main.hs
examples/: bubble-sort.scm  fibonacci.scm  fizz-buzz.scm
src/Lisp/: Core.hs  Debug.hs  Interpret.hs  Parse.hs  Value.hs
src/Vanessa/: Core.hs  Debug.hs  Eval.hs  Interpret.hs  Parse.hs  Value.hs
