cabal-version:      2.4
name:               scheme48
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Max Niederman
maintainer:         max@maxniederman.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Lisp.Core
    Lisp.Interpret
    Lisp.Parse
    Lisp.Value
    Lisp.Debug

  build-depends:
    , base          ^>=4.14.3.0
    , containers    ^>=0.6.5.1
    , parsec        ^>=3.1.15.0
    , pretty        ^>=1.1.3.6
    , transformers  ^>=0.5.6.2

  hs-source-dirs:   src
  default-language: Haskell2010

executable scheme48
  main-is:          Main.hs
  build-depends:
    , base          ^>=4.14.3.0
    , pretty        ^>=1.1.3.6
    , transformers  ^>=0.5.6.2
    , scheme48

  hs-source-dirs:   app
  default-language: Haskell2010
